GPC/tests/examples/fail/indexingNotArray.gpc

int indexingNotArray() {

    int x = 5;
    x[false].m1();

}
